--- a/css/_partial/commons.css
+++ b/css/_partial/commons.css
@@ -4,13 +4,13 @@ body {
     background-color: var(--xx-bg-header);
 }
 
-main {
-    height: calc(100vh - 66px);
-}
-
 a {
     text-decoration: none;
     color: currentColor;
+}
+
+.xx-heigt-vh{
+    height: calc(100vh - 66px);
 }
 
 #xx-main-left {
@@ -20,6 +20,10 @@ a {
 
 #xx-main-top {
     background-color: var(--xx-bg-main-top);
+}
+
+.xx-bg-badge{
+    background-color: #165bba;
 }
 
 #xx-search {
